Fix scrollbar on News section

--- a/src/pages/components/News.scss
+++ b/src/pages/components/News.scss
@@ -1,26 +1,29 @@
 .news {
-    padding: 3rem 0;
+  padding: 3rem 0;
 
-&__header {
+  &__header {
     font-size: 2.4rem;
-}
+  }
 
   &__box {
-    max-height: 500px;
+    max-height: 50rem;
     overflow: hidden;
     overflow-y: scroll;
-    margin-top: 10px;
+    margin-top: 1rem;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
   }
 
   &__item {
     border: 1px solid var(--color-grey--dark);
-    padding: 10px;
+    padding: 1rem;
     display: flex;
     flex-direction: column;
-    margin: 10px 0;
+    margin: 1rem 0;
     gap: 1rem;
     border-left: 5px solid var(--color-primary);
-    // cursor: pointer;
 
     &-tags {
       display: flex;
@@ -43,7 +46,7 @@
     }
 
     &-detail {
-        color: var(--color-grey--dark);
+      color: var(--color-grey--dark);
     }
   }
 }
